--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/common.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/iconfont/iconfont.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/libs/swiper-4.1.0.min.css">
+    <script src="%PUBLIC_URL%/libs/swiper-4.1.0.min.js"></script>
     
     <title>电影</title>
   </head>
